tests/snapshots/run_wpt_conformance__coreml_gatherElements_float32_3D_input_and_int32_indices_options_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gatherElements.https.any.js gatherElements float32 3D input and int32 indices options.axis=0, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'gatherElementsInput' must be of rank 2, instead got a multi-array value of rank 3.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherElementsInput: f32[2, 2, 2];
  }

  consts {
    operand_0: i32[1, 2, 2] @bytes([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0]);
  }

  nodes {
    [gatherElementsOutput] = gatherElements(gatherElementsInput, operand_0, axis=0, label="");
  }

  outputs { gatherElementsOutput; }
}
