tests/snapshots/run_wpt_conformance__coreml_gather_float16_1D_tensor_and_int32_0D_scalar_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float16 1D tensor and int32 0D scalar indices default options, coreml
 gather :: gather float16 1D tensor and int32 0D scalar indices default options: index 0: actual=10.828125 expected=89.0625 ulp=3111 tolerance=4
  inputs: gatherInput: [-66.0625, -68.9375, -77, -26.15625, 89.0625, -45.90625, 43.84375, 48.8125, 51.8125, 41.9375, -1.1298828125, -50.40625, 90.3125, 55.625, 44.90625, 56.84375, 10.828125, -19.6875, -37.6875, 43.125, 0.9130859375, -7.69921875, 25.765625, 73.625]; gatherIndices: [4] (constant)
  expected gatherOutput: [89.0625]
  actual gatherOutput: [10.828125]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f16[24];
  }

  consts {
    operand_0: i32[] @bytes([4, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=0, label="");
  }

  outputs { gatherOutput; }
}
