tests/snapshots/run_wpt_conformance__coreml_gather_float32_2D_tensor_and_0D_scalar_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float32 2D tensor and 0D scalar indices default options, coreml
 gather :: gather float32 2D tensor and 0D scalar indices default options: index 0: actual=-77.020454 expected=25.76774 ulp=2221420238 tolerance=4
  inputs: gatherInput: [-66.05901336669922, -68.9197006225586, -77.02045440673828, -26.158037185668945, 89.0337142944336, -45.89653396606445, 43.84803771972656, 48.81806945800781, 51.79948425292969, 41.94132614135742, -1.1303654909133911, -50.42131042480469, 90.2870101928711, 55.62076568603515, 44.92119598388672, 56.828636169433594, 10.829925537109377, -19.693084716796875, -37.696800231933594, 43.11057662963867, 0.9129875898361206, -7.699817180633545, 25.76774024963379, 73.60064697265625]; gatherIndices: [11] (constant)
  expected gatherOutput: [25.76774, 73.60065]
  actual gatherOutput: [-77.020454, -26.158037]
  expected gatherOutput full nd:
(shape [2])
[25.76774, 73.60065]
  actual gatherOutput full nd:
(shape [2])
[-77.020454, -26.158037]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f32[12, 2];
  }

  consts {
    operand_0: i32[] @bytes([11, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=0, label="");
  }

  outputs { gatherOutput; }
}
