tests/snapshots/run_wpt_conformance__coreml_gather_float32_4D_tensor_and_2D_indices_explict_options_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float32 4D tensor and 2D indices explict options.axis=0, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'gatherInput' must be of rank 5, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f32[8, 1, 1, 3];
  }

  consts {
    operand_0: i32[2, 2] @bytes([0, 0, 0, 0, 0, 0, 0, 0, 7, 0, 0, 0, 4, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=0, label="");
  }

  outputs { gatherOutput; }
}
