tests/snapshots/run_wpt_conformance__coreml_gelu_float32_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gelu.https.any.js gelu float32 1D constant tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: Feature geluInput is required but not specified.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[24] @bytes([198, 215, 96, 63, 1, 202, 198, 189, 1, 0, 12, 62, 235, 153, 237, 62, 20, 96, 136, 190, 96, 66, 83, 191, 43, 100, 90, 63, 82, 236, 196, 62, 14, 95, 45, 63, 175, 83, 246, 190, 178, 198, 152, 62, 105, 131, 45, 63, 227, 182, 6, 191, 250, 18, 179, 62, 96, 74, 4, 190, 88, 220, 21, 63, 113, 35, 101, 191, 162, 218, 231, 60, 0, 199, 202, 189, 44, 69, 98, 191, 87, 155, 24, 191, 157, 36, 163, 62, 105, 116, 245, 62, 180, 230, 132, 189]);
  }

  nodes {
    [geluOutput] = gelu(operand_0, label="");
  }

  outputs { geluOutput; }
}
