tests/snapshots/run_wpt_conformance__coreml_gelu_float32_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gelu.https.any.js gelu float32 3D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: input dtype mismatch: model expects 2-byte elements (code 65552), but input is Float32 (4-byte); type conversion is not supported for this input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    geluInput: f32[2, 3, 4];
  }

  nodes {
    [geluOutput] = gelu(geluInput, label="");
  }

  outputs { geluOutput; }
}
