tests/snapshots/run_wpt_conformance__coreml_gemm_both_negative_options_alpha_and_2nd_float16_input_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm both negative options.alpha and 2nd float16 input tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983284339_0.mlmodelc/model.mil' with error code: -5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([64, 52, 174, 57, 208, 57, 145, 56, 170, 58, 51, 49, 154, 52, 62, 57, 205, 59, 218, 54, 66, 36, 108, 48, 89, 48, 52, 56, 40, 54, 164, 49, 173, 46, 10, 58, 170, 58, 241, 50]);
    operand_2: f16[3, 5] @bytes([147, 52, 97, 49, 129, 59, 183, 53, 233, 44, 48, 54, 46, 56, 181, 58, 149, 42, 138, 49, 182, 29, 45, 53, 36, 52, 218, 52, 118, 56]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=-22.611149749186296, bTranspose=false, beta=1.0, c=2, label="");
  }

  outputs { gemmOutput; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Storage Reader expects file format version 2. at location 
 @ CreateBnnsGraphProgramFromMIL
